# devops-sonarqube

./: .dockerignore  .gitignore  Dockerfile  compose.sonarqube.yml  compose.yml  example.txt  main.py  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml
nginx/: nginx.conf
nginx/conf.d/: active_upstream.conf
scripts/: deploy.sh
tests/: test_main.py
